--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -7,9 +7,11 @@
     width: 100vw;
 }
 .menu__li {
+    color:  #505050;
     display: flex;
-    font-family: 'Sansita Swashed', cursive;
+    font-family: 'Open Sans', sans-serif;
     font-size: 1.4rem;
+    font-weight: bold;
 }
 @media (min-width: 1440px){
     .menu {
