--- a/assets/css/material-symbols.css
+++ b/assets/css/material-symbols.css
@@ -1,5 +1,6 @@
 .material-symbols-outlined {
     background-color: antiquewhite;
+    color: #ed4c4c;
     display: flex;
     font-size: 40px;
     justify-content: center;
