--- a/assets/css/material-symbols.css
+++ b/assets/css/material-symbols.css
@@ -1,6 +1,7 @@
 .material-symbols-outlined {
     background-color: antiquewhite;
     color: #ed4c4c;
+    cursor: pointer;
     display: flex;
     font-size: 40px;
     justify-content: center;
