--- a/assets/css/sobre.css
+++ b/assets/css/sobre.css
@@ -8,7 +8,7 @@
 .sobre__titulo {
     color: #d74343;
     font-family: 'Pacifico', cursive;
-    font-size: 2rem;
+    font-size: 2.75rem;
     font-weight: 100;
     justify-content: center;
     padding-top: 2rem;
@@ -16,5 +16,7 @@
 .sobre__descricao {
     font-family: 'Open Sans', sans-serif;
     font-size: 1.3rem;
+    margin-top: 2rem;
     text-align: center;
+    width: 90vw;
 }
