--- a/assets/css/banner.css
+++ b/assets/css/banner.css
@@ -1,3 +1,6 @@
+header {
+    background-color: antiquewhite;
+}
 .banner {
     align-items: center;
     display: flex;
@@ -27,10 +30,18 @@
         height: 60vh;
     }
 }
+@media (min-width: 1280px){
+    .banner {
+        justify-content: center;
+    }
+    .banner__img {
+        left: 0;
+         width: 35vw;
+    }
+}
 @media (min-width: 1440px){
     .banner__img {
         height: 20vh;
-        left: 30rem;
         width: 40vw;
     }
     .banner__principal {
