--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -13,6 +13,11 @@
     font-size: 1.4rem;
     font-weight: bold;
 }
+@media (min-width: 1280px){
+    .menu {
+        background: #f7c985;
+    }
+}
 @media (min-width: 1440px){
     .menu {
         display: flex;
