--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -3,16 +3,16 @@
     background: antiquewhite;
     display: none;
     height: 8vh;
-    justify-content: space-evenly;
+    justify-content: space-around;
     width: 100vw;
 }
 .menu__li {
     color:  #505050;
+    cursor: pointer;
     display: flex;
     font-family: 'Open Sans', sans-serif;
-    font-size: 1.4rem;
+    font-size: 1.3rem;
     font-weight: bold;
-    cursor: pointer;
 }
 @media (min-width: 1280px){
     .menu {
